force-app/main/default/objects/Opportunity/fields/Associated_Order__c.field-meta.xml
<CustomField>
    <fullName>Associated_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>