force-app/main/default/objects/Opportunity/fields/AT_VAT__c.field-meta.xml
<CustomField>
    <fullName>AT_VAT__c</fullName>
    <description>VAT for AT</description>
    <formula>Invoice_Net_Price__c * 0.20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AT VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>