force-app/main/default/objects/Opportunity/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Benefit records tied to the Account, which Opportunity is tied to.</description>
    <label>Benefit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Benefit__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Benefit__c</referenceTo>
    <relationshipLabel>Opportunities Benefit</relationshipLabel>
    <relationshipName>Opportunities_Benefit</relationshipName>
    <type>Lookup</type>
</CustomField>