force-app/main/default/objects/Opportunity/fields/Benefit_Auth_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Auth_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auth Start Date</label>
    <type>Date</type>
</CustomField>