force-app/main/default/objects/Opportunity/fields/Benefit_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Authorization_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>