force-app/main/default/objects/Opportunity/fields/Benefit_Co_Pay__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Co_Pay__c</fullName>
    <label>Co-Pay</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>