force-app/main/default/objects/Opportunity/fields/Benefit_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Coverage__c</fullName>
    <label>Coverage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>