force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Authorization__c</fullName>
    <formula>Benefit__r.Authorization_Number__c</formula>
    <label>EGEKO Authorization</label>
    <type>Text</type>
</CustomField>