force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Confirmation__c</fullName>
    <formula>HYPERLINK(&quot;https://eu.connect.boomi.com/ws/soap/createeusalesforceopportunity;boomi_auth=c2FsZXNmb3JjZUBkZXhjb21pbmMtNk82SjBPLklQVFNCSjphYWM3Y2UzNi00Yzg0LTQ3ZjMtOWRkOS1kZTlhMmU1M2M1OTY= &quot;, Benefit__r.EGEKO_Confirmation_Number__c )</formula>
    <label>EGEKO Confirmation #</label>
    <type>Text</type>
</CustomField>