force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Cost_Estimate_Received_Dt__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Cost_Estimate_Received_Dt__c</fullName>
    <formula>Benefit__r.Cost_Estimate_Received_Date__c</formula>
    <label>Cost Estimate Received Date</label>
    <type>Date</type>
</CustomField>