force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Cost_Estimate_Sent_Dt__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Cost_Estimate_Sent_Dt__c</fullName>
    <formula>Benefit__r.Cost_Estimate_Sent_Date__c</formula>
    <label>Cost Estimate Sent Date</label>
    <type>Date</type>
</CustomField>