force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>