force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_IK_Number__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_IK_Number__c</fullName>
    <formula>Benefit__r.EGEKO_IK_Number__c</formula>
    <label>IK Number Sent By EGEKO</label>
    <type>Text</type>
</CustomField>