force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Integration_Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>