force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Kopftext__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Kopftext__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EGEKO Kopftext</label>
    <length>100</length>
    <type>Text</type>
</CustomField>