force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Pre_Auth_Spoke_With__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Pre_Auth_Spoke_With__c</fullName>
    <formula>Benefit__r.Pre_Auth_Spoke_With__c</formula>
    <label>Pre-Auth Spoke With</label>
    <type>Text</type>
</CustomField>