force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Refusal_Text__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Refusal_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refusal Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>