force-app/main/default/objects/Opportunity/fields/Benefit_EGEKO_Status__c.field-meta.xml
<CustomField>
    <fullName>Benefit_EGEKO_Status__c</fullName>
    <formula>Benefit__r.EGEKO_Status__c</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>