force-app/main/default/objects/Opportunity/fields/Benefit_Payor__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Payor__c</fullName>
    <formula>Benefit__r.Payor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefit Payor</label>
    <type>Text</type>
</CustomField>