force-app/main/default/objects/Opportunity/fields/Birth_Date_To_Opp_Date_Comparison_Check__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date_To_Opp_Date_Comparison_Check__c</fullName>
    <formula>IF(Account.PersonContact.Birthdate &gt;= DATEVALUE(CreatedDate), TRUE, FALSE)</formula>
    <label>Birth Date To Opp Date Comparison Check</label>
    <type>Checkbox</type>
</CustomField>