force-app/main/default/objects/Opportunity/fields/CA_Benefit_Plan_Year_Type__c.field-meta.xml
<CustomField>
    <fullName>CA_Benefit_Plan_Year_Type__c</fullName>
    <label>Benefit Plan Year Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan Year</fullName>
            </value>
            <value>
                <fullName>Benefit Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>