force-app/main/default/objects/Opportunity/fields/CA_Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>CA_Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CA_Opp_Lead_Cancelled_Reasons</valueSetName>
    </valueSet>
</CustomField>