force-app/main/default/objects/Opportunity/fields/CA_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>CA_Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Closed</fullName>
                <default>true</default>
                <label>Not Yet Closed</label>
            </value>
            <value>
                <fullName>eCom Order pending</fullName>
            </value>
            <value>
                <fullName>Manual Order Entry</fullName>
            </value>
            <value>
                <fullName>eCom Order Confirmed</fullName>
            </value>
            <value>
                <fullName>Non-responsive</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Pricing - No INS Coverage</fullName>
            </value>
            <value>
                <fullName>Pricing - OOP Too High</fullName>
            </value>
            <value>
                <fullName>Ordered on Other Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>