force-app/main/default/objects/Opportunity/fields/CA_Coverage_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>CA_Coverage_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Confirmed</label>
    <type>Checkbox</type>
</CustomField>