force-app/main/default/objects/Opportunity/fields/CA_Customer_Docs_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>CA_Customer_Docs_Collection_Status__c</fullName>
    <label>Customer Docs Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet started</fullName>
                <default>true</default>
                <label>Not yet started</label>
            </value>
            <value>
                <fullName>Some Docs Sent</fullName>
            </value>
            <value>
                <fullName>All Docs Sent</fullName>
            </value>
            <value>
                <fullName>Some Docs Received</fullName>
            </value>
            <value>
                <fullName>Pending Doc Collection on other Opportunity</fullName>
            </value>
            <value>
                <fullName>All Docs Received</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>On Hold - Doctor Appointment</fullName>
            </value>
            <value>
                <fullName>On Hold - HI Approval Pending</fullName>
            </value>
            <value>
                <fullName>On Hold - Holiday</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>