force-app/main/default/objects/Opportunity/fields/CA_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>CA_Docs_Received__c</fullName>
    <label>All Docs Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CA_Payor_Docs_Required</valueSetName>
    </valueSet>
</CustomField>