force-app/main/default/objects/Opportunity/fields/CA_Docs_Sent_Out__c.field-meta.xml
<CustomField>
    <fullName>CA_Docs_Sent_Out__c</fullName>
    <label>Customer Docs Sent Out</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CA_Payor_Docs_Required</valueSetName>
    </valueSet>
</CustomField>