force-app/main/default/objects/Opportunity/fields/CA_Documents_Collected__c.field-meta.xml
<CustomField>
    <fullName>CA_Documents_Collected__c</fullName>
    <label>Documents Collected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CA_Payor_Docs_Required</valueSetName>
    </valueSet>
</CustomField>