force-app/main/default/objects/Opportunity/fields/CA_Estimate_to_Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>CA_Estimate_to_Patient_Status__c</fullName>
    <label>Estimate to Patient Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>