force-app/main/default/objects/Opportunity/fields/CA_Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>CA_Insurance_Coverage__c</fullName>
    <inlineHelpText>Maximum Insurance Coverage</inlineHelpText>
    <label>Insurance Coverage $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>