force-app/main/default/objects/Opportunity/fields/CA_Insurance_Coverage_Per__c.field-meta.xml
<CustomField>
    <fullName>CA_Insurance_Coverage_Per__c</fullName>
    <label>Insurance Coverage %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>