force-app/main/default/objects/Opportunity/fields/CA_Other_Authorization_Details__c.field-meta.xml
<CustomField>
    <fullName>CA_Other_Authorization_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Authorization Details</label>
    <type>TextArea</type>
</CustomField>