force-app/main/default/objects/Opportunity/fields/CA_Prescriber_Docs_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>CA_Prescriber_Docs_Collection_Status__c</fullName>
    <label>Prescriber Docs Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Docs Sent</fullName>
            </value>
            <value>
                <fullName>Docs Received</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>