force-app/main/default/objects/Opportunity/fields/CA_Prescriber_Docs_Pending__c.field-meta.xml
<CustomField>
    <fullName>CA_Prescriber_Docs_Pending__c</fullName>
    <label>Prescriber Docs Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CMN</fullName>
            </value>
            <value>
                <fullName>Claim Form</fullName>
            </value>
            <value>
                <fullName>LIC</fullName>
            </value>
            <value>
                <fullName>Pregnancy RX</fullName>
            </value>
            <value>
                <fullName>Narrative Letter</fullName>
            </value>
            <value>
                <fullName>CGM Quest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>