force-app/main/default/objects/Opportunity/fields/Calculated_Copay__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Copay__c</fullName>
    <description>If both coverage and copy exist, copay takes precedence</description>
    <formula>IF (
	NOT(ISBLANK(Benefit__r.Co_Pay__c)) &amp;&amp;  Benefit__r.Co_Pay__c &gt; 0,
	Benefit__r.Co_Pay__c,
	IF (
		NOT(ISBLANK(Benefit__r.Coverage__c)) &amp;&amp;  Benefit__r.Coverage__c &gt; 0,
		(1-Benefit__r.Coverage__c)*Amount, 0
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Copay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>