force-app/main/default/objects/Opportunity/fields/Calculated_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Type__c</fullName>
    <formula>If(TEXT(Type) != &apos;Unknown&apos;, TEXT(Type), 
If(DATEVALUE(CreatedDate) = DATEVALUE(Account.CreatedDate ), &apos;New&apos;, &apos;Reorder&apos;) 
)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>