force-app/main/default/objects/Opportunity/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ablehnung</fullName>
            </value>
            <value>
                <fullName>Angebot nicht angenommen (PKV)</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Incorrect Process (Note Required): Processing Error KK</fullName>
            </value>
            <value>
                <fullName>Integration issue</fullName>
            </value>
            <value>
                <fullName>KK Application denied</fullName>
            </value>
            <value>
                <fullName>Missing Patient Contact Info</fullName>
            </value>
            <value>
                <fullName>Mobil Device Incompatible</fullName>
            </value>
            <value>
                <fullName>Non responsive</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Operation Faulty (Note Required): Processing Error Dexcom</fullName>
            </value>
            <value>
                <fullName>Operation Incorrect (Note Required): System Change</fullName>
            </value>
            <value>
                <fullName>Opp Created Only for Quote</fullName>
            </value>
            <value>
                <fullName>Opportunity Created in Error</fullName>
            </value>
            <value>
                <fullName>Other (Note Required)</fullName>
            </value>
            <value>
                <fullName>Prescription Foreign Product</fullName>
            </value>
            <value>
                <fullName>Prescription Issued Incorrectly</fullName>
            </value>
            <value>
                <fullName>Prescription Not Necessary (long-term VZ)</fullName>
            </value>
            <value>
                <fullName>Prescription too Early</fullName>
            </value>
            <value>
                <fullName>Pricing – Cash Price too High</fullName>
            </value>
            <value>
                <fullName>Produkt nicht mehr benötigt</fullName>
            </value>
            <value>
                <fullName>Resides Outside Country</fullName>
            </value>
            <value>
                <fullName>Sonstige (Notiz erforderlich)</fullName>
                <isActive>false</isActive>
                <label>Sonstige (Notiz erforderlich)</label>
            </value>
            <value>
                <fullName>Vorgang doppelt</fullName>
            </value>
            <value>
                <fullName>Vorgang fehlerhaft - Bearbeitungsfehler</fullName>
            </value>
            <value>
                <fullName>Vorgang fehlerhaft - Systemänderung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>