force-app/main/default/objects/Opportunity/fields/Cash_Pay__c.field-meta.xml
<CustomField>
    <fullName>Cash_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Pay?</label>
    <type>Checkbox</type>
</CustomField>