force-app/main/default/objects/Opportunity/fields/CH_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>CH_Gross_Price__c</fullName>
    <formula>Invoice_Net_Price__c +  CH_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>