force-app/main/default/objects/Opportunity/fields/CH_VAT__c.field-meta.xml
<CustomField>
    <fullName>CH_VAT__c</fullName>
    <formula>Invoice_Net_Price__c * 0.077</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CH VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>