force-app/main/default/objects/Opportunity/fields/Consumer_Email__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Email</label>
    <type>Email</type>
</CustomField>