force-app/main/default/objects/Opportunity/fields/Contact_Doc_Received__c.field-meta.xml
<CustomField>
    <fullName>Contact_Doc_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Doc Received</label>
    <type>Checkbox</type>
</CustomField>