force-app/main/default/objects/Opportunity/fields/Contact_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field tracks if the Contact letter is sent to the customer</description>
    <label>Contact Letter Sent</label>
    <type>Checkbox</type>
</CustomField>