force-app/main/default/objects/Opportunity/fields/Contract_Received_Date_DS__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received_Date_DS__c</fullName>
    <description>Contract Received Date from Docusign</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Received Date DS</label>
    <type>Date</type>
</CustomField>