force-app/main/default/objects/Opportunity/fields/Contract_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Date__c</fullName>
    <formula>IF(
 AND(
     OR(RecordType.DeveloperName=&apos;GB_Opportunity&apos;,RecordType.DeveloperName=&apos;IE_Opportunity&apos;),
     Text(StageName) !=&apos;Cancelled&apos;,
     CONTAINS(UPPER(Pricebook2.Name), &apos;SUBSCRIPTION&apos;),
     CONTAINS(Pricebook2.Name, &apos;11&apos;)
    )
 , CreatedDate + 15
 , NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Request Date</label>
    <type>DateTime</type>
</CustomField>