force-app/main/default/objects/Opportunity/fields/Contract_Send_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Contract_Send_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Send Scheduled</label>
    <type>Checkbox</type>
</CustomField>