force-app/main/default/objects/Opportunity/fields/Contract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Sent Date</label>
    <type>DateTime</type>
</CustomField>