force-app/main/default/objects/Opportunity/fields/Contract_Sent_Date_DS__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date_DS__c</fullName>
    <description>Sent date from Docusign</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Sent Date DS</label>
    <type>Date</type>
</CustomField>