force-app/main/default/objects/Opportunity/fields/Copay_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Copay_Product_Quantity__c</fullName>
    <description>Rollup will pull the product quantity, which is having the copay amount</description>
    <label>Copay Product Quantity</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.UnitPrice</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>