force-app/main/default/objects/Opportunity/fields/Cost_Estimate_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_Received_Date__c</fullName>
    <description>Cost Estimate Received Date for Switzerland</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Estimate Received Date</label>
    <type>Date</type>
</CustomField>