force-app/main/default/objects/Opportunity/fields/Cost_Estimate_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_Sent_Date__c</fullName>
    <description>Cost Estimate Sent Date for Switzerland</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Estimate Sent Date</label>
    <type>Date</type>
</CustomField>