force-app/main/default/objects/Opportunity/fields/Cost_Estimate_Status__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_Status__c</fullName>
    <label>Cost Estimate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>