force-app/main/default/objects/Opportunity/fields/Count_of_Approved_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Approved_Quotes__c</fullName>
    <label>Count of Approved Quotes</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>