force-app/main/default/objects/Opportunity/fields/Count_Of_Non_Rejected_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Non_Rejected_Quotes__c</fullName>
    <description>Field counts the number of quotes, which dont have the status as Rejected</description>
    <label>Count Of Non Rejected Quotes</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>