force-app/main/default/objects/Opportunity/fields/Count_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Quotes__c</fullName>
    <description>Total number of quotes tied to the Opportunity.</description>
    <label>Count of Quotes</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>