force-app/main/default/objects/Opportunity/fields/Create_Fund__c.field-meta.xml
<CustomField>
    <fullName>Create_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Fund?</label>
    <type>Checkbox</type>
</CustomField>