force-app/main/default/objects/Opportunity/fields/Create_New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag will be checked to create new Opportunity when cancelling an Opportunity</description>
    <label>Create New Opportunity?</label>
    <type>Checkbox</type>
</CustomField>