force-app/main/default/objects/Opportunity/fields/Customer_Docs_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Docs_Received_Date__c</fullName>
    <description>Customer Docs Received Date for Switzerland</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Docs Received Date</label>
    <type>Date</type>
</CustomField>