force-app/main/default/objects/Opportunity/fields/Customer_Docs_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Docs_Sent_Date__c</fullName>
    <description>Customer Docs Sent Date for Switzerland</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Docs Sent Date</label>
    <type>Date</type>
</CustomField>