force-app/main/default/objects/Opportunity/fields/Determination_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Determination Received Date</label>
    <type>Date</type>
</CustomField>