force-app/main/default/objects/Opportunity/fields/Determination_Status__c.field-meta.xml
<CustomField>
    <fullName>Determination_Status__c</fullName>
    <label>Determination Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Received</fullName>
                <default>true</default>
                <label>Not Received</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Received via Email</fullName>
            </value>
            <value>
                <fullName>Received via Fax</fullName>
            </value>
            <value>
                <fullName>Received via Phone</fullName>
            </value>
            <value>
                <fullName>Received via Mail</fullName>
            </value>
            <value>
                <fullName>Received via Online account</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>