force-app/main/default/objects/Opportunity/fields/DexTracker_Email__c.field-meta.xml
<CustomField>
    <fullName>DexTracker_Email__c</fullName>
    <description>Email option to be selected on Opportunity record when creating an Reorder.</description>
    <label>DexTracker Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>