force-app/main/default/objects/Opportunity/fields/Direct_Deposit_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>Direct_Deposit_Letter_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Deposit Letter Received</label>
    <type>Checkbox</type>
</CustomField>