force-app/main/default/objects/Opportunity/fields/Discount_SKU_Count__c.field-meta.xml
<CustomField>
    <fullName>Discount_SKU_Count__c</fullName>
    <description>This field stores the count of DEX-MKT-DISC SKU in Opportunity product</description>
    <label>Discount SKU Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.TotalPrice</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>