force-app/main/default/objects/Opportunity/fields/Doc_Collection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Doc_Collection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Documents Received</label>
    <type>Checkbox</type>
</CustomField>