force-app/main/default/objects/Opportunity/fields/Doc_Collection_Completed_Closed_Stage__c.field-meta.xml
<CustomField>
    <fullName>Doc_Collection_Completed_Closed_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doc Collection Completed</label>
    <type>Checkbox</type>
</CustomField>